[Major] Refactored search API return value